fixed: spacing copyright and privacy policy

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -118,7 +118,7 @@ p {
 }
 
 .copyright {
-  margin: 20px auto 0 auto;
+  margin: 20px auto 20px auto;
   font-size: 0.9rem;
   color: #fcf8ec;
 }
